--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -18,6 +18,7 @@
         <file>controls.png</file>
         <file>away.png</file>
         <file>near.png</file>
+        <file>tutorial-new.png</file>
         <file>cancel.png</file>
     </qresource>
 </RCC>
