--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -222,7 +222,7 @@ border-style: solid;
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/images/release.png</normaloff>:/images/release.png</iconset>
+          <normaloff>:/images/retract.png</normaloff>:/images/retract.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -608,14 +608,29 @@ border: solid;</string>
        <widget class="QPushButton" name="fetchButton">
         <property name="geometry">
          <rect>
-          <x>700</x>
-          <y>280</y>
-          <width>201</width>
-          <height>71</height>
+          <x>730</x>
+          <y>250</y>
+          <width>141</width>
+          <height>101</height>
          </rect>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(90, 225, 143, 0%);
+border-style: solid;
+</string>
+        </property>
         <property name="text">
-         <string>Fetch</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/fetch 2.png</normaloff>:/images/fetch 2.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>120</width>
+          <height>120</height>
+         </size>
         </property>
        </widget>
       </widget>
