--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -6,7 +6,6 @@
         <file>forward.png</file>
         <file>right.png</file>
         <file>up.png</file>
-        <file>release.png</file>
         <file>left.png</file>
         <file>fetch.png</file>
         <file>settings.png</file>
@@ -20,5 +19,7 @@
         <file>near.png</file>
         <file>tutorial-new.png</file>
         <file>cancel.png</file>
+        <file>fetch 2.png</file>
+        <file>retract.png</file>
     </qresource>
 </RCC>
