--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -19,7 +19,7 @@
         <file>near.png</file>
         <file>tutorial-new.png</file>
         <file>cancel.png</file>
-        <file>fetch 2.png</file>
         <file>retract.png</file>
+        <file>fetch-2 copy.png</file>
     </qresource>
 </RCC>
