--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -20,6 +20,6 @@
         <file>tutorial-new.png</file>
         <file>cancel.png</file>
         <file>retract.png</file>
-        <file>fetch-2 copy.png</file>
+        <file>fetch-2.png</file>
     </qresource>
 </RCC>
