--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -669,9 +669,9 @@ border: solid;
        <widget class="QHoverSensitiveButton" name="hoverButton">
         <property name="geometry">
          <rect>
-          <x>260</x>
-          <y>140</y>
-          <width>171</width>
+          <x>20</x>
+          <y>190</y>
+          <width>141</width>
           <height>71</height>
          </rect>
         </property>
@@ -685,8 +685,8 @@ border: solid;
        <widget class="QLabel" name="label_4">
         <property name="geometry">
          <rect>
-          <x>520</x>
-          <y>160</y>
+          <x>170</x>
+          <y>210</y>
           <width>191</width>
           <height>41</height>
          </rect>
@@ -715,8 +715,8 @@ color: white;</string>
        <widget class="QLabel" name="hover_time_label">
         <property name="geometry">
          <rect>
-          <x>230</x>
-          <y>260</y>
+          <x>0</x>
+          <y>340</y>
           <width>101</width>
           <height>31</height>
          </rect>
@@ -742,8 +742,8 @@ color: white;</string>
        <widget class="QHoverSensitiveButton" name="hover_time_up_button">
         <property name="geometry">
          <rect>
-          <x>350</x>
-          <y>210</y>
+          <x>120</x>
+          <y>280</y>
           <width>71</width>
           <height>71</height>
          </rect>
@@ -760,8 +760,8 @@ border: 1px solid black;</string>
        <widget class="QHoverSensitiveButton" name="hover_time_down_button">
         <property name="geometry">
          <rect>
-          <x>350</x>
-          <y>290</y>
+          <x>120</x>
+          <y>360</y>
           <width>71</width>
           <height>71</height>
          </rect>
@@ -778,8 +778,8 @@ border: 1px solid black;</string>
        <widget class="QLabel" name="label_6">
         <property name="geometry">
          <rect>
-          <x>540</x>
-          <y>260</y>
+          <x>240</x>
+          <y>330</y>
           <width>151</width>
           <height>41</height>
          </rect>
@@ -808,9 +808,9 @@ color: white;</string>
        <widget class="QHoverSensitiveButton" name="autoButton">
         <property name="geometry">
          <rect>
-          <x>260</x>
-          <y>60</y>
-          <width>171</width>
+          <x>20</x>
+          <y>90</y>
+          <width>141</width>
           <height>81</height>
          </rect>
         </property>
@@ -824,8 +824,8 @@ color: white;</string>
        <widget class="QLabel" name="label_8">
         <property name="geometry">
          <rect>
-          <x>520</x>
-          <y>70</y>
+          <x>170</x>
+          <y>100</y>
           <width>231</width>
           <height>51</height>
          </rect>
@@ -882,8 +882,8 @@ border: solid;
        <widget class="QHoverSensitiveButton" name="change_fetch_vals_button">
         <property name="geometry">
          <rect>
-          <x>270</x>
-          <y>370</y>
+          <x>450</x>
+          <y>90</y>
           <width>161</width>
           <height>71</height>
          </rect>
@@ -895,8 +895,8 @@ border: solid;
        <widget class="QLabel" name="label_7">
         <property name="geometry">
          <rect>
-          <x>470</x>
-          <y>380</y>
+          <x>630</x>
+          <y>110</y>
           <width>291</width>
           <height>41</height>
          </rect>
@@ -920,6 +920,255 @@ color: white;</string>
         </property>
         <property name="text">
          <string>Set New Fetch Values</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_5">
+        <property name="geometry">
+         <rect>
+          <x>630</x>
+          <y>190</y>
+          <width>291</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Helvetica</family>
+          <pointsize>29</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 29pt &quot;Helvetica&quot;;
+color: white;</string>
+        </property>
+        <property name="text">
+         <string>Claw Rotation</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="claw_rotation_up_button">
+        <property name="geometry">
+         <rect>
+          <x>510</x>
+          <y>180</y>
+          <width>71</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="claw_rotation_down_button">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>180</y>
+          <width>71</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>-</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="move_delay_up_button">
+        <property name="geometry">
+         <rect>
+          <x>510</x>
+          <y>370</y>
+          <width>71</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="move_delay_down_button">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>370</y>
+          <width>71</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>-</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_9">
+        <property name="geometry">
+         <rect>
+          <x>650</x>
+          <y>380</y>
+          <width>251</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Helvetica</family>
+          <pointsize>29</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 29pt &quot;Helvetica&quot;;
+color: white;</string>
+        </property>
+        <property name="text">
+         <string>Move Delay</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="claw_rotation_label">
+        <property name="geometry">
+         <rect>
+          <x>350</x>
+          <y>180</y>
+          <width>161</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Helvetica</family>
+          <pointsize>24</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 24pt &quot;Helvetica&quot;;
+color: white;</string>
+        </property>
+        <property name="text">
+         <string>VAL</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="move_delay_label">
+        <property name="geometry">
+         <rect>
+          <x>350</x>
+          <y>380</y>
+          <width>161</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Helvetica</family>
+          <pointsize>24</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 24pt &quot;Helvetica&quot;;
+color: white;</string>
+        </property>
+        <property name="text">
+         <string> VAL</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="arm_rotation_label">
+        <property name="geometry">
+         <rect>
+          <x>350</x>
+          <y>290</y>
+          <width>161</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Helvetica</family>
+          <pointsize>24</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 24pt &quot;Helvetica&quot;;
+color: white;</string>
+        </property>
+        <property name="text">
+         <string> VAL</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="arm_rotation_up_button">
+        <property name="geometry">
+         <rect>
+          <x>510</x>
+          <y>280</y>
+          <width>71</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_10">
+        <property name="geometry">
+         <rect>
+          <x>630</x>
+          <y>290</y>
+          <width>291</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Helvetica</family>
+          <pointsize>29</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 29pt &quot;Helvetica&quot;;
+color: white;</string>
+        </property>
+        <property name="text">
+         <string>Arm Rotation</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="arm_rotation_down_button">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>280</y>
+          <width>71</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>-</string>
         </property>
        </widget>
       </widget>
