--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -21,5 +21,7 @@
         <file>cancel.png</file>
         <file>retract.png</file>
         <file>fetch-2.png</file>
+        <file>gear.png</file>
+        <file>help.png</file>
     </qresource>
 </RCC>
