--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -25,5 +25,6 @@
         <file>help.png</file>
         <file>minus.png</file>
         <file>plus.png</file>
+        <file>grey.png</file>
     </qresource>
 </RCC>
