--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -87,7 +87,7 @@ color: white;</string>
        <widget class="QHoverSensitiveButton" name="releaseButton">
         <property name="geometry">
          <rect>
-          <x>720</x>
+          <x>750</x>
           <y>370</y>
           <width>162</width>
           <height>102</height>
@@ -125,9 +125,9 @@ border-style: solid;
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>270</y>
-          <width>281</width>
-          <height>131</height>
+          <y>280</y>
+          <width>251</width>
+          <height>101</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -153,9 +153,9 @@ border: solid;</string>
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>380</y>
-          <width>281</width>
-          <height>121</height>
+          <y>390</y>
+          <width>251</width>
+          <height>101</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -236,7 +236,7 @@ border: solid;</string>
        <widget class="QHoverSensitiveButton" name="rightButton">
         <property name="geometry">
          <rect>
-          <x>580</x>
+          <x>570</x>
           <y>160</y>
           <width>91</width>
           <height>131</height>
@@ -265,9 +265,9 @@ border: solid;</string>
         <property name="geometry">
          <rect>
           <x>400</x>
-          <y>270</y>
+          <y>260</y>
           <width>171</width>
-          <height>81</height>
+          <height>71</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -369,7 +369,7 @@ border: solid;
         <property name="geometry">
          <rect>
           <x>440</x>
-          <y>70</y>
+          <y>60</y>
           <width>91</width>
           <height>31</height>
          </rect>
@@ -389,7 +389,7 @@ color: white;
          <rect>
           <x>680</x>
           <y>210</y>
-          <width>91</width>
+          <width>61</width>
           <height>31</height>
          </rect>
         </property>
@@ -409,7 +409,7 @@ color: white;
           <x>440</x>
           <y>350</y>
           <width>91</width>
-          <height>31</height>
+          <height>21</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -425,9 +425,9 @@ color: white;
        <widget class="QLabel" name="ready_label_5">
         <property name="geometry">
          <rect>
-          <x>210</x>
+          <x>240</x>
           <y>210</y>
-          <width>91</width>
+          <width>61</width>
           <height>31</height>
          </rect>
         </property>
@@ -444,10 +444,10 @@ color: white;
        <widget class="QHoverSensitiveButton" name="stopButton">
         <property name="geometry">
          <rect>
-          <x>410</x>
+          <x>400</x>
           <y>170</y>
-          <width>161</width>
-          <height>101</height>
+          <width>171</width>
+          <height>91</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -471,7 +471,7 @@ border: solid;</string>
        <widget class="QHoverSensitiveButton" name="fetchButton">
         <property name="geometry">
          <rect>
-          <x>730</x>
+          <x>760</x>
           <y>250</y>
           <width>141</width>
           <height>101</height>
@@ -518,27 +518,93 @@ color: white;
        <widget class="QHoverSensitiveButton" name="tutorialButton">
         <property name="geometry">
          <rect>
-          <x>10</x>
+          <x>830</x>
           <y>0</y>
-          <width>81</width>
-          <height>51</height>
+          <width>61</width>
+          <height>101</height>
          </rect>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(183, 183, 183, 0);
+border: solid;</string>
+        </property>
         <property name="text">
-         <string>?</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/help.png</normaloff>:/images/help.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>80</width>
+          <height>60</height>
+         </size>
         </property>
        </widget>
        <widget class="QHoverSensitiveButton" name="settingButton">
         <property name="geometry">
          <rect>
-          <x>10</x>
-          <y>50</y>
+          <x>720</x>
+          <y>0</y>
           <width>81</width>
-          <height>51</height>
+          <height>91</height>
          </rect>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(183, 183, 183, 0%);
+border: solid;</string>
+        </property>
         <property name="text">
-         <string>S</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/gear.png</normaloff>:/images/gear.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>80</width>
+          <height>80</height>
+         </size>
+        </property>
+       </widget>
+       <widget class="QLabel" name="ready_label_6">
+        <property name="geometry">
+         <rect>
+          <x>280</x>
+          <y>470</y>
+          <width>91</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;
+</string>
+        </property>
+        <property name="text">
+         <string>Away</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="ready_label_7">
+        <property name="geometry">
+         <rect>
+          <x>610</x>
+          <y>470</y>
+          <width>91</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;
+</string>
+        </property>
+        <property name="text">
+         <string>Near</string>
         </property>
        </widget>
       </widget>
@@ -584,8 +650,7 @@ border: solid;
          </rect>
         </property>
         <property name="styleSheet">
-         <string notr="true">font: 36pt &quot;.Helvetica Neue DeskInterface&quot;;
-background-color: rgb(183, 183, 183);</string>
+         <string notr="true"/>
         </property>
         <property name="text">
          <string>ON</string>
@@ -765,7 +830,7 @@ border: solid;
        <widget class="QHoverSensitiveButton" name="change_fetch_vals_button">
         <property name="geometry">
          <rect>
-          <x>60</x>
+          <x>70</x>
           <y>410</y>
           <width>141</width>
           <height>71</height>
