--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -643,8 +643,8 @@ border: solid;
        <widget class="QHoverSensitiveButton" name="hoverButton">
         <property name="geometry">
          <rect>
-          <x>70</x>
-          <y>150</y>
+          <x>60</x>
+          <y>240</y>
           <width>141</width>
           <height>71</height>
          </rect>
@@ -659,8 +659,8 @@ border: solid;
        <widget class="QLabel" name="label_4">
         <property name="geometry">
          <rect>
-          <x>220</x>
-          <y>170</y>
+          <x>230</x>
+          <y>260</y>
           <width>181</width>
           <height>41</height>
          </rect>
@@ -689,8 +689,8 @@ color: white;</string>
        <widget class="QLabel" name="hover_time_label">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>310</y>
+          <x>10</x>
+          <y>420</y>
           <width>111</width>
           <height>31</height>
          </rect>
@@ -716,8 +716,8 @@ color: white;</string>
        <widget class="QHoverSensitiveButton" name="hover_time_up_button">
         <property name="geometry">
          <rect>
-          <x>140</x>
-          <y>260</y>
+          <x>130</x>
+          <y>370</y>
           <width>71</width>
           <height>61</height>
          </rect>
@@ -744,8 +744,8 @@ border: solid;</string>
        <widget class="QHoverSensitiveButton" name="hover_time_down_button">
         <property name="geometry">
          <rect>
-          <x>140</x>
-          <y>320</y>
+          <x>130</x>
+          <y>430</y>
           <width>71</width>
           <height>61</height>
          </rect>
@@ -773,7 +773,7 @@ border: solid</string>
         <property name="geometry">
          <rect>
           <x>230</x>
-          <y>300</y>
+          <y>420</y>
           <width>151</width>
           <height>41</height>
          </rect>
@@ -830,8 +830,8 @@ border: solid;
        <widget class="QHoverSensitiveButton" name="change_fetch_vals_button">
         <property name="geometry">
          <rect>
-          <x>70</x>
-          <y>410</y>
+          <x>60</x>
+          <y>130</y>
           <width>141</width>
           <height>71</height>
          </rect>
@@ -843,8 +843,8 @@ border: solid;
        <widget class="QLabel" name="label_7">
         <property name="geometry">
          <rect>
-          <x>210</x>
-          <y>410</y>
+          <x>220</x>
+          <y>140</y>
           <width>201</width>
           <height>61</height>
          </rect>
@@ -1316,6 +1316,29 @@ color: white;</string>
         </property>
         <property name="text">
          <string>SECONDS REMAINING</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="retract_cancel_button">
+        <property name="geometry">
+         <rect>
+          <x>380</x>
+          <y>360</y>
+          <width>211</width>
+          <height>121</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/cancel.png</normaloff>:/images/cancel.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>215</width>
+          <height>125</height>
+         </size>
         </property>
        </widget>
       </widget>
