--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -26,5 +26,6 @@
         <file>minus.png</file>
         <file>plus.png</file>
         <file>grey.png</file>
+        <file>settings-help.png</file>
     </qresource>
 </RCC>
