--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -92,7 +92,7 @@ border: solid;
         <property name="geometry">
          <rect>
           <x>750</x>
-          <y>370</y>
+          <y>390</y>
           <width>162</width>
           <height>102</height>
          </rect>
@@ -476,7 +476,7 @@ border: solid;</string>
         <property name="geometry">
          <rect>
           <x>760</x>
-          <y>250</y>
+          <y>280</y>
           <width>141</width>
           <height>101</height>
          </rect>
@@ -491,7 +491,7 @@ border-style: solid;
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/images/fetch-2.png</normaloff>:/images/fetch-2.png</iconset>
+          <normaloff>:/images/extend.png</normaloff>:/images/extend.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -1274,10 +1274,10 @@ border: solid;</string>
        <widget class="QPushButton" name="pushButton">
         <property name="geometry">
          <rect>
-          <x>160</x>
-          <y>-20</y>
-          <width>731</width>
-          <height>541</height>
+          <x>150</x>
+          <y>0</y>
+          <width>751</width>
+          <height>511</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -1290,11 +1290,11 @@ border-style: solid;
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/images/tutorial-new.png</normaloff>:/images/tutorial-new.png</iconset>
+          <normaloff>:/images/tutorial_new.png</normaloff>:/images/tutorial_new.png</iconset>
         </property>
         <property name="iconSize">
          <size>
-          <width>600</width>
+          <width>650</width>
           <height>600</height>
          </size>
         </property>
