--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -33,10 +33,10 @@
        <widget class="QHoverSensitiveButton" name="backButton_3">
         <property name="geometry">
          <rect>
-          <x>20</x>
+          <x>780</x>
           <y>10</y>
-          <width>141</width>
-          <height>71</height>
+          <width>51</width>
+          <height>51</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -49,20 +49,20 @@ border: solid;
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/images/back.png</normaloff>:/images/back.png</iconset>
+          <normaloff>:/images/X.png</normaloff>:/images/X.png</iconset>
         </property>
         <property name="iconSize">
          <size>
-          <width>100</width>
-          <height>100</height>
+          <width>40</width>
+          <height>40</height>
          </size>
         </property>
        </widget>
        <widget class="QPushButton" name="pushButton_3">
         <property name="geometry">
          <rect>
-          <x>180</x>
-          <y>10</y>
+          <x>110</x>
+          <y>0</y>
           <width>661</width>
           <height>491</height>
          </rect>
