--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -27,5 +27,6 @@
         <file>settings-help.png</file>
         <file>tutorial_new.png</file>
         <file>extend.png</file>
+        <file>X.png</file>
     </qresource>
 </RCC>
