add red dots to resources

--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -28,5 +28,7 @@
         <file>tutorial_new.png</file>
         <file>extend.png</file>
         <file>X.png</file>
+        <file>no-red-dot.png</file>
+        <file>red-dot.png</file>
     </qresource>
 </RCC>
